refactor: 인증 생략 path 상수화