@@ -5,6 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
+import org.springframework.util.AntPathMatcher;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -13,15 +14,22 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+
+import static com.example.project.config.filter.ExcludeAuthenticationUrl.*;
 
 @Component
 @RequiredArgsConstructor
 public class JwtTokenFilter extends OncePerRequestFilter {
 
     // 인증에서 제외할 url
-    private static final List<String> EXCLUDE_URL = List.of("/login", "/token/refresh-token", "/h2-console/**");
+
+    private static final List<String> EXCLUDE_URL = Collections.unmodifiableList(Arrays.asList(KEYS.getUrl(), Login.getUrl(), TOKEN.getUrl(), H2.getUrl()));
     private final JwtTokenUtil jwtTokenUtil;
+    private final AntPathMatcher pathMatcher = new AntPathMatcher();
+
 
     @Override
     public void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain) throws ServletException, IOException {
@@ -31,7 +39,7 @@ public class JwtTokenFilter extends OncePerRequestFilter {
 
         // 2. validateToken 으로 토큰 유효성 검사
         if (token != null && jwtTokenUtil.validateToken(request, token)) {
-            // 토큰이 유효할 경우 토큰에서 Authentication 객체를 가지고 와서 SecurityContext 에 저장
+            // 토큰이 유효할 경우 토큰에서 Authentication 객체를 가지고 와서 SecurityContext에 저장
             Authentication authentication = jwtTokenUtil.getAuthentication(token);
             SecurityContextHolder.getContext().setAuthentication(authentication);
         }
@@ -41,7 +49,7 @@ public class JwtTokenFilter extends OncePerRequestFilter {
     // Filter에서 제외할 URL 설정
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) throws ServletException {
-        return EXCLUDE_URL.stream().anyMatch(exclude -> exclude.equalsIgnoreCase(request.getServletPath()));
+        return EXCLUDE_URL.stream().anyMatch(p -> pathMatcher.match(p, request.getServletPath()));
     }
 
     private String extractToken(HttpServletRequest request) {
